fix navbar position on smaller screens

--- a/src/App.scss
+++ b/src/App.scss
@@ -177,7 +177,7 @@ div.layout {
                 border-bottom: .125rem solid var(--border-color);
                 border-right: 0;
                 width: 100%;
-                top: 3rem;
+                top: 3.5rem;
                 min-height: calc(100% - 3rem);
                 box-sizing: border-box;
                 z-index: 9;
